<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marvel Super Heroes</string>
    <string name="character_image_contentDesc">Character image</string>
    <string name="character_unknown">There\'s no information about %1$s</string>
    <string name="no_results">No results 😓, please check your internet connection</string>
    <string name="youtube_title_menu">Marvel Youtube</string>
    <string name="title_youtube_toolbar">Youtube Marvel</string>
    <string name="player_youtube_error">Failed to start the video 😓</string>
    <string name="divisor_content_description">Divisor to videos</string>
    <string name="default_image_player_content_description">Default image player</string>
    <string name="splash_marvel_logo_content_desc">Marvel logo</string>
    <string name="response_kind_video">youtube#video</string>

    <!-- Comics Fragment -->
    <string name="details_comics_text_button">COMICS</string>

    <!-- MotionLayout Scenes -->
    <string name="comic_text_button_start">COMICS</string>
    <string name="comic_text_button_end">DESCRIPTION</string>

    <!-- AlertDialog -->
    <string name="alert_dialog_title_text">No videos found 😓</string>
    <string name="alert_dialog_message_text">Do you want to go back or retry the videos search?</string>
    <string name="alert_dialog_empty_list_close_text">Close</string>
    <string name="alert_dialog_empty_list_retry_text">Retry</string>

    <!-- ActionBar Labels -->
    <string name="characters_title_action_bar">Marvel Super Heroes</string>
    <string name="details_title_action_bar">Details</string>
    <string name="youtube_title_action_bar">Marvel Youtube</string>
    <string name="comics_title_action_bar">Comics</string>
</resources>