<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/marvel_nav_graph"
    app:startDestination="@id/allCharactersFragment">

    <fragment
        android:id="@+id/allCharactersFragment"
        android:name="com.lucascabral.marvelsuperheroes.presenter.view.AllCharactersFragment"
        android:label="@string/characters_title_action_bar"
        tools:layout="@layout/fragment_all_characters" >
        <action
            android:id="@+id/action_allCharactersFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.lucascabral.marvelsuperheroes.presenter.view.CharacterDetailsFragment"
        android:label="@string/details_title_action_bar"
        tools:layout="@layout/fragment_character_details">
        <argument
            android:name="character"
            app:argType="com.lucascabral.marvelsuperheroes.data.network.model.character.Character"
            app:nullable="false" />
        <action
            android:id="@+id/action_characterDetailsFragment_to_comicsFragment"
            app:destination="@id/comicsFragment" />
    </fragment>
    <fragment
        android:id="@+id/comicsFragment"
        android:name="com.lucascabral.marvelsuperheroes.presenter.view.ComicsFragment"
        android:label="@string/comics_title_action_bar"
        tools:layout="@layout/fragment_comics">
        <argument
            android:name="character"
            app:argType="com.lucascabral.marvelsuperheroes.data.network.model.character.Character"
            app:nullable="false" />
    </fragment>
</navigation>