<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:constraintSetStart="@+id/start"
        motion:constraintSetEnd="@+id/end"
        motion:duration="1800">
        <KeyFrameSet></KeyFrameSet>
        <OnClick motion:targetId="@+id/detailsCharacterComicsButton" />
    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/detailsCharacterThumbImageView"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/character_image_contentDesc"
            android:scaleType="fitCenter"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/detailsCharacterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/detailsCharacterThumbImageView" />

        <Constraint
            android:id="@+id/detailsCharacterDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:textSize="@dimen/details_character_description_start_size"
            android:textColor="@color/black"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView">
            <PropertySet android:alpha="1" />
            <Transform android:rotation="0" />
        </Constraint>

        <Constraint
            android:id="@+id/detailsCharacterRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView">
            <PropertySet android:alpha="0" />
            <Transform android:rotation="-180" android:scaleX="0" android:scaleY="0" />
        </Constraint>

        <Constraint
            android:id="@+id/detailsCharacterComicsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_details"
            android:text="@string/details_comics_text_button"
            android:textStyle="bold"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/comic_text_button_start"/>
        </Constraint>
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/detailsCharacterThumbImageView"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/character_image_contentDesc"
            android:scaleType="fitCenter"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/detailsCharacterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/detailsCharacterThumbImageView" />

        <Constraint
            android:id="@+id/detailsCharacterDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:textSize="@dimen/details_character_description_start_size"
            android:textColor="@color/black"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView">
            <PropertySet android:alpha="0" />
            <Transform android:rotation="-180" android:scaleX="0" android:scaleY="0" />
        </Constraint>

        <Constraint
            android:id="@+id/detailsCharacterRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView">
            <PropertySet android:alpha="1" />
            <Transform android:rotation="0" />
        </Constraint>

        <Constraint
            android:id="@+id/detailsCharacterComicsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_details"
            android:text="@string/details_comics_text_button"
            android:textStyle="bold"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/comic_text_button_end"/>
        </Constraint>
    </ConstraintSet>

    <ConstraintSet android:id="@+id/startTest">
        <Constraint
            android:id="@+id/detailsCharacterThumbImageView"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/character_image_contentDesc"
            android:scaleType="fitCenter"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/detailsCharacterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/detailsCharacterThumbImageView" />

        <Constraint
            android:id="@+id/detailsCharacterDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/black"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView" />

        <Constraint
            android:id="@+id/detailsCharacterRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintStart_toEndOf="@id/detailsCharacterDescriptionTextView"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView" />

        <Constraint
            android:id="@+id/detailsCharacterComicsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_details"
            android:text="@string/details_comics_text_button"
            android:textStyle="bold"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/details_comics_text_button"/>
        </Constraint>
    </ConstraintSet>

    <ConstraintSet android:id="@+id/endTest">
        <Constraint
            android:id="@+id/detailsCharacterThumbImageView"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/character_image_contentDesc"
            android:scaleType="fitCenter"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />

        <Constraint
            android:id="@+id/detailsCharacterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/detailsCharacterThumbImageView" />

        <Constraint
            android:id="@+id/detailsCharacterDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toStartOf="@id/detailsCharacterRecyclerView"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView" />

        <Constraint
            android:id="@+id/detailsCharacterRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            motion:layout_constraintBottom_toTopOf="@id/detailsCharacterComicsButton"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/detailsCharacterNameTextView" />

        <Constraint
            android:id="@+id/detailsCharacterComicsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_details"
            android:text="@string/details_comics_text_button"
            android:textStyle="bold"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent">
            <CustomAttribute
                motion:attributeName="text"
                motion:customStringValue="@string/details_title_action_bar"/>
        </Constraint>
    </ConstraintSet>
</MotionScene>
